--- a/package.json
+++ b/package.json
@@ -496,7 +496,14 @@
       "@metamask/rpc-methods>@metamask/key-tree>secp256k1": false,
       "eth-lattice-keyring>gridplus-sdk>secp256k1": false,
       "eth-lattice-keyring>secp256k1": false,
-      "htmlcoin-ethers-wrapper>secp256k1": false
+      "htmlcoin-ethers-wrapper>secp256k1": false,
+      "3box>3id-connect>@portis/web3>@portis/web3-provider-engine>eth-json-rpc-infura>json-rpc-engine>babelify>babel-core>babel-register>core-js": false,
+      "3box>3id-connect>@portis/web3>ethereumjs-util>keccak": false,
+      "3box>3id-connect>web3modal>styled-components": false,
+      "3box>orbit-db-storage-adapter>level": false,
+      "3box>orbit-db-storage-adapter>level>leveldown": false,
+      "@storybook/react>@pmmmwh/react-refresh-webpack-plugin>core-js-pure": false,
+      "resolve-url-loader>es6-iterator>es5-ext": false
     }
   }
 }
