--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "setup": "yarn install && yarn setup:postinstall",
     "setup:postinstall": "yarn patch-package && yarn allow-scripts",
     "start": "yarn build:dev dev --apply-lavamoat=false",
-    "start:lavamoat": "yarn build:dev dev --apply-lavamoat=false",
+    "start:lavamoat": "yarn build:dev dev --apply-lavamoat=true",
     "start:mv3": "ENABLE_MV3=true yarn build:dev dev --apply-lavamoat=false",
     "dist": "yarn build dist",
     "dist:mv3": "ENABLE_MV3=true yarn build dist",
@@ -250,7 +250,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/register": "^7.5.5",
-    "@lavamoat/allow-scripts": "^2.0.3",
+    "@lavamoat/allow-scripts": "^2.1.0",
     "@lavamoat/lavapack": "^3.1.0",
     "@metamask/auto-changelog": "^2.1.0",
     "@metamask/eslint-config": "^9.0.0",
