--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:mv3": "ENABLE_MV3=true yarn build:dev dev --apply-lavamoat=false",
     "dist": "yarn build dist",
     "dist:mv3": "ENABLE_MV3=true yarn build dist",
-    "build": "yarn lavamoat:build",
+    "build": "yarn lavamoat:build --apply-lavamoat=false",
     "build:dev": "node development/build/index.js",
     "start:test": "SEGMENT_HOST='https://api.segment.io' SEGMENT_WRITE_KEY='FAKE' SENTRY_DSN_DEV=https://fake@sentry.io/0000000 yarn build testDev",
     "benchmark:chrome": "SELENIUM_BROWSER=chrome node test/e2e/benchmark.js",
